--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 .first {
-        backgrond-color:red;
-        hight:500px;
+        background-color:red;
+        height:50px;
         width:100px;
         display:inline;
         
